Added Resources page.
Added Event, SubEvent, and Note models, for the Resources page.
Added Event, SubEvent, and Note to the Resources view.
Added to Resources.html tempalte.
Moved tests/ to tests_all/ so there is less ambiguity, also renamed
/tests/tests.py to /tests/tests_main.py.
Removed contenttypes from .json, because they were causing loaddata
errors.

--- a/umonya/umonya/templates/home.html
+++ b/umonya/umonya/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block slideshow %}
-<div id="myCarousel" class="grid_10 prefix_1 carousel slide">
+<div class="row">
+<div id="myCarousel" class="span10 prefix_1 carousel slide">
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -30,6 +31,7 @@
   <!-- Carousel nav -->
   <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
   <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div>
 </div>
 {% endblock %}
 
