--- a/umonya/umonya/templates/base.html
+++ b/umonya/umonya/templates/base.html
@@ -23,15 +23,13 @@
 	</head>
 	<body>
 		<div id="header">
-			<div class="row">
-				<div class="span12">
-					<div class="logo">
+				<div class="container_12">
+					<div class="logo" style="margin: 0 0 20px 0; ">
 						<img src= {% static "img/css/logo.png" %} border="0">
 					</div>
 					{% block header %} {%endblock%}
 					{% block slideshow %} {% endblock %}
 				</div>
-
 			<div class="navbar">
 				<div class="menu navbar-inner" >
 					<div class="container_12">
