--- a/umonya/umonya/templates/custom_404.html
+++ b/umonya/umonya/templates/custom_404.html
@@ -15,7 +15,7 @@
   <ul>
     <li>
       <p>
-        "Oops, either you or I have made a mistkae.
+        "Oops, either you or I have made a mistake.
         Well, we're not all perfect, but we try.
         Can you try this again or maybe visit our
         <a title="Umonya Home" href="{% url home %}">Home Page</a>
