Made changes suggested by Nina, Stefano and vhata
Changed admins in admin.py to under_score naming.
Fixed spelling mistake of ordering in admin.py
Fixed tuple declarations in orderings in admin.py.
Change venue in announcement to Abbotts College Century Gate
Converted some stuff in base.html to Boostrap.
PEP'ed keywords in test.

Fixed "*" imports

--- a/umonya/umonya/templates/resources.html
+++ b/umonya/umonya/templates/resources.html
@@ -29,7 +29,7 @@
     <p>There are no scheduled upcoming events.</p>
   {% endif %}
 
-  <h2>Notes</h2>
+  <h2>Additional Resources</h2>
   {% if notes %}
     <ul>
     {% for note in notes %}
@@ -42,7 +42,7 @@
     </ul>
 
   {% else %}
-    <p>There are no notes available.</p>
+    <p>There are no additional resources available.</p>
   {% endif %}
 
 </div>
