--- a/umonya/umonya/templates/base.html
+++ b/umonya/umonya/templates/base.html
@@ -22,55 +22,59 @@
 		<script src= {% static "js/umonya.js" %} type="text/javascript"></script>
 	</head>
 	<body>
-		<div id="header">
+			<div id="header">
 				<div class="container_12">
 					<div class="logo" style="margin: 0 0 20px 0; ">
-						<img src= {% static "img/css/logo.png" %} border="0">
+						<img src="{% static "img/css/logo.png" %}" border="0" />
 					</div>
 					{% block header %} {%endblock%}
 					{% block slideshow %} {% endblock %}
 				</div>
 			<div class="navbar">
 				<div class="menu navbar-inner" >
-					<div class="container_12">
+					<div class="span2">
+					</div>
+					<div class="span10">
 						<ul class="nav">
-								<li class="">
-									<a href="/">Home</a>
-								</li>
+							<li class="">
+								<a href="/">Home</a>
+							</li>
 
-								<li class="">
-									<a href="/blog">Blog</a>
-								</li>
+							<li class="">
+								<a href="/blog">Blog</a>
+							</li>
 
+							<li class="">
+								<a href="/about">About Us</a>
+							</li>
+							{% if registration.enabled  %}
 								<li class="">
-									<a href="/about">About Us</a>
+									<a href="/registration">Registration Open</a>
 								</li>
-								{% if registration.enabled  %}
-									<li class="">
-										<a href="/registration">Registration Open</a>
-									</li>
-								{% else %}
-									<li class="">
-										<a href="/registration">Registration Closed</a>
-									</li>
-								{% endif %}
+							{% else %}
 								<li class="">
-									<a href="/resources">Resources</a>
+									<a href="/registration">Registration Closed</a>
 								</li>
+							{% endif %}
+							<li class="">
+								<a href="/resources">Resources</a>
+							</li>
 
-								<li class="">
-									<a href="/course">Course Schedule</a>
-								</li>
+							<li class="">
+								<a href="/course">Course Schedule</a>
+							</li>
 
-								<li class="">
-									<a href="/contact">Contact us</a>
-								</li>
+							<li class="">
+								<a href="/contact">Contact us</a>
+							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container body_content">
+		<div class="span2">
+		</div>
+		<div class="span12">
 
 			<div class="row">
 				<div class="span8"  style="margin: 0 10px 0 0; ">
