Made more changes from suggestions.
Moved sub_event data into an array.
Removed tests for is_space.
Changed is_space to use built in function.

--- a/umonya/umonya/templates/resources.html
+++ b/umonya/umonya/templates/resources.html
@@ -5,9 +5,10 @@
 <div class="span8">
   <h1>Resources</h1>
 
-  <h2>Upcoming Events</h2>
-
   {% if events %}
+
+    <h2>Upcoming Events</h2>
+
     <p>
       <h3>{{ event_name }}</h3>
     </p>
@@ -19,7 +20,7 @@
 
         {% for sub_event in value %}
           <p>
-            {{ sub_event }}
+            {{ sub_event[0] }} {{ sub_event[1] }}
           </p>
         {% endfor %}
       </li>
