Last changes from suggestions.

--- a/umonya/umonya/templates/custom_404.html
+++ b/umonya/umonya/templates/custom_404.html
@@ -7,13 +7,9 @@
 {% block content %}
 
   <div class="span8">
-
-  <a href="#">
+  <div class="hero-unit">
+    <h1>404</h1>
     <h2>I don't think this is the page you were looking for</h2>
-  </a>
-
-  <ul>
-    <li>
       <p>
         "Oops, either you or I have made a mistake.
         Well, we're not all perfect, but we try.
@@ -22,9 +18,7 @@
         to start fresh.
         We'll do better next time."
       </p>
-    </li>
-  </ul>
-
+  </div>
   </div>
 
 {% endblock %}
