--- a/umonya/umonya/templates/resources.html
+++ b/umonya/umonya/templates/resources.html
@@ -20,7 +20,7 @@
 
         {% for sub_event in value %}
           <p>
-            {{ sub_event[0] }} {{ sub_event[1] }}
+            {{ sub_event.0 }} {{ sub_event.1 }}
           </p>
         {% endfor %}
       </li>
