--- a/umonya/umonya/templates/blog.html
+++ b/umonya/umonya/templates/blog.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 
-    <h2>Posts</h2>
+    <h1>Blog</h1>
+    <hr />
     {% if posts %}
         <ul>
         {% for post in posts %}
