--- a/umonya/umonya/templates/base.html
+++ b/umonya/umonya/templates/base.html
@@ -1,149 +1,154 @@
 {% load staticfiles %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="keywords" content="umonya, python, teach, africa, tutoring, programming, computer, science, cape, town, classes, uct, software, it, c, learn, how to, high, school, children, South Africa, Cape Town, teaching">
-		<meta name="description" content="Teaching Python to children and young people.">
-		<meta name="generator" content="Django">
-		<title>
-			{%block title%}
-				Umonya - Home
-			{%endblock%}
-		</title>
-		<link rel="stylesheet" href= {% static "css/reset.min.css" %} />
-		<link rel="stylesheet" href= {% static "css/960_12_col.min.css" %} />
-		<link rel="stylesheet" href= {% static "css/bootstrap.min.css" %} />
-		<link rel="stylesheet" href= {% static "css/umonya.css" %} />
-		<script src= {% static "js/jquery.min.js" %} type="text/javascript"></script>
-		<script src= {% static "js/bootstrap.min.js" %} type="text/javascript"></script>
-		<script src= {% static "js/bootstrap-carousel.js" %} type="text/javascript"></script>
-		<script src= {% static "js/jquery.validate.min.js" %} type="text/javascript"></script>
-		<script src= {% static "js/umonya.js" %} type="text/javascript"></script>
-	</head>
-	<body>
-		<div id="header">
-			<div class="container_12">
-				<div class="logo" style="margin: 0 0 20px 0; ">
-					<img src="{% static "img/css/logo.png" %}" border="0" />
-				</div>
-				{% block header %} {%endblock%}
-				{% block slideshow %} {% endblock %}
-			</div>
-			<div class="navbar">
-				<div class="menu navbar-inner" >
-					<div class="span2">
-					</div>
-					<div class="span10">
-						<ul class="nav">
-							<li class="">
-								<a href="/">Home</a>
-							</li>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="keywords" content="umonya, python, teach, africa, tutoring, programming, computer, science, cape, town, classes, uct, software, it, c, learn, how to, high, school, children, South Africa, Cape Town, teaching">
+  <meta name="description" content="Teaching Python to children and young people.">
+  <meta name="generator" content="Django">
 
-							<li class="">
-								<a href="/blog">Blog</a>
-							</li>
+  <title>
+    {% block title %}
+    Umonya - Home
+    {% endblock %}
+  </title>
 
-							<li class="">
-								<a href="/about">About Us</a>
-							</li>
-							{% if registration.enabled  %}
-								<li class="">
-									<a href="/registration">Registration Open</a>
-								</li>
-							{% else %}
-								<li class="">
-									<a href="/registration">Registration Closed</a>
-								</li>
-							{% endif %}
-							<li class="">
-								<a href="/resources">Resources</a>
-							</li>
+  <link rel="stylesheet" href= {% static "css/reset.min.css" %} />
+  <link rel="stylesheet" href= {% static "css/960_12_col.min.css" %} />
+  <link rel="stylesheet" href= {% static "css/bootstrap.min.css" %} />
+  <link rel="stylesheet" href= {% static "css/umonya.css" %} />
 
-							<li class="">
-								<a href="/course">Course Schedule</a>
-							</li>
+  <script src= {% static "js/jquery.min.js" %} type="text/javascript"></script>
+  <script src= {% static "js/bootstrap.min.js" %} type="text/javascript"></script>
+  <script src= {% static "js/bootstrap-carousel.js" %} type="text/javascript"></script>
+  <script src= {% static "js/jquery.validate.min.js" %} type="text/javascript"></script>
+  <script src= {% static "js/umonya.js" %} type="text/javascript"></script>
+</head>
 
-							<li class="">
-								<a href="/contact">Contact us</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="span2">
-		</div>
-		<div class="span12">
+<body>
+  <div id="header">
+    <div class="container_12">
+      <div class="logo" style="margin: 0 0 20px 0; ">
+        <img src="{% static "img/css/logo.png" %}" border="0" />
+      </div>
+      {% block header %} {% endblock %}
+      {% block slideshow %} {% endblock %}
+    </div>
+    <div class="navbar">
+      <div class="menu navbar-inner" >
+        <div class="span2">
+        </div>
+        <div class="span10" style="width: auto;">
+          <ul class="nav">
+            <li class="">
+              <a href="/">Home</a>
+            </li>
 
-			<div class="row">
-				<div class="span8"  style="margin: 0 10px 0 0; ">
-				{%block content%}
+            <li class="">
+              <a href="/blog">Blog</a>
+            </li>
 
-				{%endblock%}
-				</div>
-				<div class="span4">
+            <li class="">
+              <a href="/about">About Us</a>
+            </li>
+            {% if registration.enabled  %}
+                <li class="">
+                  <a href="/registration">Registration Open</a>
+                </li>
+            {% else %}
+                <li class="">
+                  <a href="/registration">Registration Closed</a>
+                </li>
+            {% endif %}
+            <li class="">
+              <a href="/resources">Resources</a>
+            </li>
 
-					<div>
-						<h3>Latest Tweets</h3>
-					</div>
+            <li class="">
+              <a href="/course">Course Schedule</a>
+            </li>
 
-					<!-- Follow Button -->
+            <li class="">
+              <a href="/contact">Contact us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="span2">
+  </div>
+  <div class="span12">
 
-					<a href="https://twitter.com/projectumonya" class="twitter-follow-button" data-show-count="false" data-size="large" data-align="">Follow @projectumonya</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    <div class="row">
+      <div class="span8"  style="margin: 0 10px 0 0; ">
+      {%block content%}
+
+      {%endblock%}
+      </div>
+      <div class="span4">
+
+        <div>
+          <h3>Latest Tweets</h3>
+        </div>
+
+        <!-- Follow Button -->
+
+        <a href="https://twitter.com/projectumonya" class="twitter-follow-button" data-show-count="false" data-size="large" data-align="">Follow @projectumonya</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 
-					<!--twitter widget -->
-					<div>
-						<a class="twitter-timeline" href="https://twitter.com/projectumonya" data-widget-id="344727722985132032" data-theme="dark" data-link-color="#aaaaaa"  data-related="twitterapi,twitter" data-chrome="nofooter noheader noborders noscrollbar"data-aria-polite="assertive" width="300" height="300" lang="EN">Tweets by @projectumonya</a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <!--twitter widget -->
+        <div>
+          <a class="twitter-timeline" href="https://twitter.com/projectumonya" data-widget-id="344727722985132032" data-theme="dark" data-link-color="#aaaaaa"  data-related="twitterapi,twitter" data-chrome="nofooter noheader noborders noscrollbar"data-aria-polite="assertive" width="300" height="300" lang="EN">Tweets by @projectumonya</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 
-					</div>
+        </div>
 
-					<!--faceboook widget -->
-					<div>
-						<div id="fb-root" class></div>
-						<script>(function(d, s, id) {
-						  var js, fjs = d.getElementsByTagName(s)[0];
-						  if (d.getElementById(id)) return;
-						  js = d.createElement(s); js.id = id;
-						  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
-						  fjs.parentNode.insertBefore(js, fjs);
-						}(document, 'script', 'facebook-jssdk'));</script>
+        <!--faceboook widget -->
+        <div>
+          <div id="fb-root" class></div>
+          <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
+          fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));</script>
 
-						<div class="fb-like" data-href="http://facebook.com/projectumonya" data-send="false" data-width="300" data-show-faces="false" data-font="lucida grande"></div>
+          <div class="fb-like" data-href="http://facebook.com/projectumonya" data-send="false" data-width="300" data-show-faces="false" data-font="lucida grande"></div>
 
-					</div>
+        </div>
 
-					<!--Google+ Widget widget -->
-					<div>
-						<!-- Place this tag in your head or just before your close body tag. -->
-						<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-						  {lang: 'en-GB'}
-						</script>
+        <!--Google+ Widget widget -->
+        <div>
+          <!-- Place this tag in your head or just before your close body tag. -->
+          <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
+          {lang: 'en-GB'}
+          </script>
 
-						<!-- Place this tag where you want the badge to render. -->
-						<div class="g-plus" data-height="69" data-width="300" data-href="https://plus.google.com/108023234245317429003" data-rel="publisher" data-theme="light">
-						</div>
+          <!-- Place this tag where you want the badge to render. -->
+          <div class="g-plus" data-height="69" data-width="300" data-href="https://plus.google.com/108023234245317429003" data-rel="publisher" data-theme="light">
+          </div>
 
-					</div>
+        </div>
 
-					<row>
-					{%block categories %}
-					{%endblock%}
-					</row>
+        <row>
+        {%block categories %}
+        {%endblock%}
+        </row>
 
-				</div>
-			</div>
-		</div>
+      </div>
+    </div>
+  </div>
 
-		<div class = "row">
-			<div class = "span12">
-				{%block footer%}
-				{%endblock%}
-			</div>
-		</div>
-	</body>
+  <div class = "row">
+    <div class = "span12">
+      {%block footer%}
+      {%endblock%}
+    </div>
+  </div>
+</body>
 </html>
