Added context processor.
Added context processor, for dealing with the navigation bar.
Moved navigation bar into navigation.html template.
Added .css for navigation bar.
Reformatted the urls.py.

--- a/umonya/umonya/static/css/umonya.css
+++ b/umonya/umonya/static/css/umonya.css
@@ -58,6 +58,12 @@
 	background-color: black;
 }
 
+.navbar .active{
+	color: orange;
+	background-color: black;
+	font-weight: bold;
+}
+
 /****************************************************************************
 	STYLING THE BODY
 ****************************************************************************/
