--- a/umonya/umonya/templates/base.html
+++ b/umonya/umonya/templates/base.html
@@ -35,50 +35,15 @@
       {% block header %} {% endblock %}
       {% block slideshow %} {% endblock %}
     </div>
-    <div class="navbar">
-      <div class="menu navbar-inner" >
-        <div class="span2">
-        </div>
-        <div class="span10" style="width: auto;">
-          <ul class="nav">
-            <li class="">
-              <a href="/">Home</a>
-            </li>
 
-            <li class="">
-              <a href="/blog">Blog</a>
-            </li>
 
-            <li class="">
-              <a href="/about">About Us</a>
-            </li>
-            {% if registration.enabled  %}
-                <li class="">
-                  <a href="/registration">Registration Open</a>
-                </li>
-            {% else %}
-                <li class="">
-                  <a href="/registration">Registration Closed</a>
-                </li>
-            {% endif %}
-            <li class="">
-              <a href="/resources">Resources</a>
-            </li>
-
-            <li class="">
-              <a href="/course">Course Schedule</a>
-            </li>
-
-            <li class="">
-              <a href="/contact">Contact us</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="span2">
+    </div>
+  {% include "navigation.html" %}
   </div>
+  </div>
+
+  <div class="container_12">
   <div class="span12">
 
     <div class="row">
@@ -142,6 +107,7 @@
 
       </div>
     </div>
+  </div>
   </div>
 
   <div class = "row">
