Put imports in parentheses.
Added size to display of Notes, in resources.html

--- a/umonya/umonya/templates/resources.html
+++ b/umonya/umonya/templates/resources.html
@@ -40,7 +40,9 @@
     {% for note in notes %}
       <li>
         <p>
-          <a href="{{ note.link }}">{{ note.title|safe}}</a>
+          <a href="{{ note.link }}">
+            {{ note.title|safe}}
+              <span class="muted">{{ note.size }}</span></a>
         </p>
       </li>
     {% endfor %}
