Added WYSIWYG editor for announcements
Added django_wysiwyg editor to announcements form.
HTML formatted announcements.
Changed Announcement.pub_date to auto_now_add so it keeps the original
publishing date.
Added container for pagination in announcements pages and
view_announcement.

--- a/umonya/umonya/templates/home.html
+++ b/umonya/umonya/templates/home.html
@@ -19,7 +19,9 @@
                 <small>Created on {{ announcement.pub_date }}</small>
             </p>
             <p>
-                {{ announcement.body|safe}}
+                {% autoescape on %}
+                  {{ announcement.body|safe }}
+                {% endautoescape %}
             </p>
         </li>
       {% endfor %}
@@ -30,7 +32,8 @@
   {% endif %}
 </div>
 
-<ul class="pager">
+<div class="container span8">
+  <ul class="pager">
     <li
       {% if page_number == total_pages %}
         class="previous disabled" >
@@ -51,6 +54,7 @@
       {% endif %}
         Newer &rarr;</a>
     </li>
-</ul>
+  </ul>
+</div>
 
 {% endblock %}
