--- a/umonya/umonya/templates/view_announcement.html
+++ b/umonya/umonya/templates/view_announcement.html
@@ -25,10 +25,12 @@
 
   </div>
 
-  <ul class="pager">
-    <li class="previous active">
-      <a href="page{{ page_number }}">&larr; Back</a>
-    </li>
-  </ul>
+  <div class="containter span8">
+    <ul class="pager">
+      <li class="previous active">
+        <a href="page{{ page_number }}">&larr; Back</a>
+      </li>
+    </ul>
+  </div>
 
 {% endblock %}
