--- a/umonya/umonya/templates/contact.html
+++ b/umonya/umonya/templates/contact.html
@@ -5,31 +5,35 @@
         <h1>
             Thank You we have recieved your response
         </h1>
+        <hr />
 
     {% else %}
-        <div class="span8">
-            <form action="" method="POST" id="contactForm">{% csrf_token %}
-                {% for field in form %}
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {% if field.errors %}
-                        <div class="alert alert-error">
-                            {{ field.errors }}
-                        </div>
-                    {% endif %}
-                {% endfor %}
-                <div class="span8">
-                    <input type = "submit" value="Send" />
-                </div>
-            </form>
-        </div>
+        <h1>
+            Contact Us
+        </h1>
+        <hr />
+
+        <form action="" method="POST" id="contactForm">{% csrf_token %}
+            {% for field in form %}
+                {{ field.label_tag }}
+                {{ field }}
+                {% if field.errors %}
+                    <div class="alert alert-error">
+                        {{ field.errors }}
+                    </div>
+                {% endif %}
+            {% endfor %}
+            <div class="span8">
+                <input type = "submit" value="Send" />
+            </div>
+        </form>
 
         <script type="text/javascript">
             $().ready(function(){
                 $("#contactForm").validate()
             });
         </script>
-        
+
     {% endif %}
 
 {% endblock %}
