--- a/umonya/umonya/templates/registration.html
+++ b/umonya/umonya/templates/registration.html
@@ -2,48 +2,53 @@
 
 
 {% block content %}
-    {% if section.enabled %}
-        <h2> REGISTRATION </h2>
-        <div class="span8 prefix_1">
-            <form action="" method = "post" id = "registrationForm">{% csrf_token %}
-                {% for field in form %}
-                    <div class="span8 form_content">
-                        {{ field.label_tag }}
-                        {{ field }}
-                        {% if field.errors %}
-                            <div class="alert alert-error">
-                                {{ field.errors }}
-                            </div>
-                        {% endif %}
-                    </div>
-                {% endfor %}
+  {% if section.enabled %}
+    <h1> Registration </h1>
+    <hr />
+    <div class="row">
+    <div class="span8">
+      <form action="" method = "post" id = "registrationForm">{% csrf_token %}
+        <fieldset>
+        {% for field in form %}
+          <div class="span8">
+            {{ field.label_tag }}
+            {{ field }}
+            {% if field.errors %}
+              <div class="alert alert-error">
+                {{ field.errors }}
+              </div>
+            {% endif %}
+          </div>
+        {% endfor %}
 
-                <div class = "grid_6">
-                  <input type = "submit" value="Register" />
-                </div>
-            </form>
-
-    <script type="text/javascript">
-        $().ready(function(){
-            $("#registrationForm").validate()
-            $(".digits").validate({
-                rules: {
-                    digits: true,
-                }
-            });
-    });
-    </script>
-
+        <div class = "span6">
+          <input type="submit" value="Register" />
         </div>
+        </fieldset>
+      </form>
 
-    {% elif success %}
-        <h1>
-            Thank you, we have recieved your application.
-        </h1>
+  <script type="text/javascript">
+    $().ready(function(){
+      $("#registrationForm").validate()
+      $(".digits").validate({
+        rules: {
+          digits: true,
+        }
+      });
+  });
+  </script>
 
-    {% else %}
-        <h1>
-            Sorry but the registration has closed.
-        </h1>
-    {% endif %}
+    </div>
+  </div>
+
+  {% elif success %}
+    <h1>
+      Thank you, we have recieved your application.
+    </h1>
+
+  {% else %}
+    <h1>
+      Sorry but the registration has closed.
+    </h1>
+  {% endif %}
 {% endblock %}
