--- a/umonya/umonya/templates/view_announcement.html
+++ b/umonya/umonya/templates/view_announcement.html
@@ -6,31 +6,30 @@
 
 {% block content %}
 
-  <div class="span8">
 
   <a href="{{ page_number }}{{ announcement.slug }}">
-    <h1>{{ announcement.title }}</h1></a>
+    <h1 style="margin: 13px 0 0;">{{ announcement.title }}</h1></a>
+
   <hr />
 
-  <ul>
+  <ul class="unstyled" style="margin: 0 0 0;">
     <li>
-      <p class="muted text-left">
-        <small>Created on {{ announcement.pub_date }}</small>
-      </p>
-      <p>
-        {{ announcement.body|safe}}
-      </p>
+        <p class="muted text-left">
+            <small>Created on {{ announcement.pub_date }}</small>
+        </p>
+
+        {{ announcement.body|safe }}
+
     </li>
+    <hr />
   </ul>
 
-  </div>
-
-  <div class="containter span8">
-    <ul class="pager">
-      <li class="previous active">
-        <a href="page{{ page_number }}">&larr; Back</a>
-      </li>
-    </ul>
-  </div>
+<div class="container span8">
+  <ul class="pager">
+    <li class="previous active">
+      <a href="page{{ page_number }}">&larr; Back</a>
+    </li>
+  </ul>
+</div>
 
 {% endblock %}
