--- a/umonya/umonya/templates/base.html
+++ b/umonya/umonya/templates/base.html
@@ -14,8 +14,11 @@
     {% endblock %}
   </title>
 
-  <link rel="stylesheet" href= {% static "css/bootstrap.css" %} />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href= {% static "css/bootstrap.css" %} />
+  <link href={% static "css/bootstrap-responsive.css" %} rel="stylesheet"/>
+  <link rel="Shortcut Icon" href={% static "img/pic/favicon.ico" %} />
   <script src= {% static "js/jquery.min.js" %} type="text/javascript"></script>
   <script src= {% static "js/bootstrap.min.js" %} type="text/javascript"></script>
   <script src= {% static "js/bootstrap-carousel.js" %} type="text/javascript"></script>
@@ -59,7 +62,7 @@
     {%endblock%}
 
   </div>
-  <div class="span4" style="margin: 15px 0 0 10px; ">
+  <div class="span4 .hidden-phone" style="margin: 15px 0 0 10px; ">
     <div class="container">
       <!--faceboook widget -->
       <div>
