--- a/umonya/templates/base.html
+++ b/umonya/templates/base.html
@@ -32,9 +32,9 @@
 ================================================== -->
 
 <div id="header">
-  <div class="container">
+  <div class="container-fluid">
     <header class="jumbotron subhead" id="overview">
-      <div class="row">
+      <div class="row-fluid">
         <div class="logo" style="margin: 20px ; ">
           <img src="{% static "img/css/logo.png" %}" border="0" />
         </div>
@@ -45,7 +45,7 @@
   </div>
   <!-- Navbar
   ================================================== -->
-  <div class="container">
+  <div class="container-fluid">
 
     {% include "navigation.html" %}
 
@@ -54,7 +54,7 @@
 
 <!-- endhead================================================== -->
 
-<div class="container">
+<div class="container-fluid">
   <div class="span8" style="margin: 0 10px 0 0;">
 
     {%block content%}
