Added basic blog app.
Added blog app based on announcement app, with individual views and
categories.
Added sponsor.html template.
Changed formatting on about.html, to use bootstrap.

--- a/umonya/templates/about.html
+++ b/umonya/templates/about.html
@@ -1,31 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div id = "about_page" class = "grid_8">
+<div id = "" class = "span8" style="margin: 13px 0 0;">
 	{% for content in page_content %}
 		{{ content.content | safe }}
 	{% endfor %}
-		
-			
-	<div class = "">
+
+
+	<div class = "container span8" style = "margin-left: 0;">
 		<hr />
 		<h1> Who we are </h1>
 		<hr />
 			{% for a in about %}
-				<div class = "grid_3" style = "margin-bottom: 30px;">
+				<div class = "span4" style = "margin: 0 13px 30px 0;">
 					<h3> {{ a.name }} </h3>
 					<hr />
-					
-					<div class = "grid_3">
-						<img src ="/static/{{ a.bios_photo }}" width = "200" />
-					</div>
-					<div class = "clearfix"></div>
-					<div class = "content_padding">
+
+					<img src ="/static/{{ a.bios_photo }}" width = "200" />
+
+					<div class="">
 						{{ a.bios }}
 					</div>
-						
 				</div>
-				
+
 			{% endfor %}
 	</div>
 </div>
