Added sponsors page.
Removed unused urls.py.
Added sponsors page as app.

--- a/umonya/templates/navigation.html
+++ b/umonya/templates/navigation.html
@@ -45,6 +45,9 @@
             <a class="{% navactive request 'course' %}" href="/course">Course Schedule</a>
           </li>
           <li class="">
+            <a class="{% navactive request 'sponsors' %}" href="/sponsors">Sponsors</a>
+          </li>
+          <li class="">
             <a class="{% navactive request 'contact' %}" href="/contact">Contact us</a>
           </li>
         </ul>
