--- a/umonya/templates/resources.html
+++ b/umonya/templates/resources.html
@@ -3,53 +3,76 @@
 {% block content %}
 
 <h1>Resources</h1>
+
 <hr />
 
-{% if events %}
+  {% if events %}
 
-  <h2>Upcoming Events</h2>
-  <hr />
+    <h2>Upcoming Events</h2>
 
-  <p>
-    <h3>{{ event_name }}</h3>
     <hr />
-  </p>
 
-  <ul>
-  {% for key, value in events.items %}
-    <li>
-      <h3>{{ key }}</h3>
+    <p>
+      <h3>{{ event_name }}</h3>
+      <hr />
+    </p>
 
-      {% for sub_event in value %}
-        <p>
-          {{ sub_event.0 }} {{ sub_event.1 }}
-        </p>
+    <ul>
+
+      {% for key, value in events.items %}
+
+        <li>
+          <h3>{{ key }}</h3>
+
+          {% for sub_event in value %}
+
+            <p>
+              {{ sub_event.0 }} {{ sub_event.1 }}
+            </p>
+
+          {% endfor %}
+
+        </li>
+
       {% endfor %}
-    </li>
-  {% endfor %}
-  </ul>
-{% else %}
-  <p>There are no scheduled upcoming events.</p>
-{% endif %}
+
+    </ul>
+
+  {% else %}
+
+    <p>There are no scheduled upcoming events.</p>
+
+  {% endif %}
+
 <hr />
 
 <h2>Additional Resources</h2>
-<hr />
-{% if notes %}
-  <ul>
-  {% for note in notes %}
-    <li>
-      <p>
-        <a href="{{ note.link }}">
-          {{ note.title|safe}}
-            <span class="muted">{{ note.size }}</span></a>
-      </p>
-    </li>
-  {% endfor %}
-  </ul>
 
-{% else %}
-  <p>There are no additional resources available.</p>
-{% endif %}
+<hr />
+
+  {% if notes %}
+
+    <ul>
+
+      {% for note in notes %}
+
+        <li>
+          <p>
+            <a href="{{ note.link }}">
+              {{ note.title|safe}}
+              <span class="muted">{{ note.size }}</span>
+            </a>
+          </p>
+        </li>
+
+      {% endfor %}
+
+    </ul>
+
+  {% else %}
+
+    <p>There are no additional resources available.</p>
+
+  {% endif %}
 
 {% endblock %}
